Fix X scrolling on mobile, fix colors

--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -54,7 +54,7 @@
   left: 0;
   top: 100%;
   width: 230px;
-  background-color: white;
+  background-color: var(--primary);
   border-radius: 15px;
   box-shadow: 0px 15px 50px 0px rgba(27, 32, 50, 0.1);
 
@@ -89,15 +89,13 @@
 /* MOBILE */
 @media screen and (max-width: 750px) {
   .navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     height: 100vh;
-    background-color: antiquewhite;
+    background-color: var(--primary);
     transition: all 0.2s ease-in-out;
     text-align: center;
     text-align: left;
-
-    border: 1px solid black;
   }
   .mobileMenuButtons {
     display: flex;
